[package]
name = "cf-hello-world"
version = "0.1.0"
edition = "2021"
authors = [ "JHolder <holder@l5sg.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
worker = { version="0.5.0" }
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
url = "2.5.4"
serde = "1.0.217"
serde_json = "1.0.137"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["io-util", "rt"] }
regex = "1.11.1"
anyhow = "1.0.95"
tokio-stream = "0.1.17"
rustls-rustcrypto = "0.0.2-alpha"
pki-types = { package = "rustls-pki-types", version = "1.10", features = ["alloc", "web"] }
rustls = { version = "0.23.22", default-features = false, features = ["custom-provider"] }
webpki-roots = "0.26.8"
instant = "0.1.13"
